creación de card de modelos

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
 
 
-<body class="font-sans text-white bg-[radial-gradient(25%_35%_at_20%_60%,rgba(37,99,235,0.25)_0%,transparent_100%),radial-gradient(30%_40%_at_85%_30%,rgba(29,78,216,0.25)_0%,transparent_100%),radial-gradient(45%_55%_at_50%_80%,rgba(30,64,175,0.35)_0%,transparent_100%),linear-gradient(135deg,#020617_0%,#020617_100%)] bg-cover bg-no-repeat">
+<body
+  class="font-sans text-white bg-[radial-gradient(25%_35%_at_20%_60%,rgba(37,99,235,0.25)_0%,transparent_100%),radial-gradient(30%_40%_at_85%_30%,rgba(29,78,216,0.25)_0%,transparent_100%),radial-gradient(45%_55%_at_50%_80%,rgba(30,64,175,0.35)_0%,transparent_100%),linear-gradient(135deg,#020617_0%,#020617_100%)] bg-cover bg-no-repeat">
 
 
   <header class="relative h-screen bg-cover bg-center flex flex-col "
@@ -64,11 +65,11 @@
           </div>
           <div class="flex gap-6 mt-6">
             <button
-              class="bg-white text-black animate-fade-up px-6 py-3 transition-all hover:bg-white/50 hover:text-white border-transparent rounded-xl">Ver
+              class="bg-white w-fit text-black animate-fade-up px-6 py-3 transition-all hover:bg-white/50 hover:text-white border-transparent rounded-xl">Ver
               proyectos</button>
             <a href="#section-contacto">
               <button
-                class="border-2 border-white animate-fade-up animate-delay-[0.1s] transition-all hover:bg-blue-600 hover:border-transparent px-6 py-3 rounded-xl">Solicitar
+                class="border-2 w-fit border-white animate-fade-up animate-delay-[0.1s] transition-all hover:bg-blue-600 hover:border-transparent px-6 py-3 rounded-xl">Solicitar
                 cotización</button></a>
           </div>
         </div>
@@ -117,55 +118,62 @@
   <main class="mx-32 ">
 
     <div id="sobre-nosotros" class="mt-20">
-<h2 class="text-3xl text-center font-semibold text-blue-600"> Sobre Nosotros </h2>
+      <h2 class="text-3xl text-center font-semibold text-blue-600">• Sobre Nosotros •</h2>
       <div class="flex gap-6 justify-center text-center mt-10 text-lg">
 
 
         <div class="w-[80%] flex flex-col gap-6 ">
-         <p class="h-[50%]"> En <span class="text-blue-600 font-semibold">JC Barandas</span> nos especializamos en el diseño, fabricación e instalación de barandas, pasamanos y estructuras en acero inoxidable, combinando<span class="text-blue-600 font-semibold"> funcionalidad, seguridad y estética</span> en cada proyecto.</p>
+          <p class="h-[50%]"> En <span class="text-blue-600 font-semibold">JC Barandas</span> nos especializamos en el
+            diseño, fabricación e instalación de barandas, pasamanos y estructuras en acero inoxidable, combinando<span
+              class="text-blue-600 font-semibold"> funcionalidad, seguridad y estética</span> en cada proyecto.</p>
 
-          <p class="h-[50%]">Contamos con taller propio, lo que nos permite controlar todo el proceso: desde la selección de materiales
+          <p class="h-[50%]">Contamos con taller propio, lo que nos permite controlar todo el proceso: desde la
+            selección de materiales
             hasta
             la terminación final. Trabajamos con acero inoxidable de alta calidad y vidrios de seguridad, garantizando
-            <span class="text-blue-600 font-semibold"> durabilidad, resistencia y un acabado prolijo</span> en cada detalle.</p>
+            <span class="text-blue-600 font-semibold"> durabilidad, resistencia y un acabado prolijo</span> en cada
+            detalle.
+          </p>
         </div>
 
         <div class=" border-r-2 border-blue-600"></div>
 
-        <div class="w-[80%] flex flex-col  gap-6"> 
-          <p class="h-[50%]">Atendemos proyectos residenciales y comerciales,<span class="text-blue-600 font-semibold"> adaptándonos a las necesidades de cada cliente </span>y brindando
+        <div class="w-[80%] flex flex-col  gap-6">
+          <p class="h-[50%]">Atendemos proyectos residenciales y comerciales,<span class="text-blue-600 font-semibold">
+              adaptándonos a las necesidades de cada cliente </span>y brindando
             asesoramiento personalizado desde la primera consulta. Creemos que cada espacio es único, por eso
-           <span class="text-blue-600 font-semibold"> desarrollamos
-            soluciones a medida</span>, priorizando siempre la seguridad y el diseño.
+            <span class="text-blue-600 font-semibold"> desarrollamos
+              soluciones a medida</span>, priorizando siempre la seguridad y el diseño.
           </p>
 
-           <p class="h-[50%]">  Nos encontramos en Zona Norte, donde recibimos a nuestros clientes y coordinamos visitas para tomar medidas
+          <p class="h-[50%]"> Nos encontramos en Zona Norte, donde recibimos a nuestros clientes y coordinamos visitas
+            para tomar medidas
             y
-            evaluar cada proyecto en el lugar. Nuestro objetivo es ofrecer un<span class="text-blue-600 font-semibold"> servicio confiable, transparente y de
-            calidad</span>,
+            evaluar cada proyecto en el lugar. Nuestro objetivo es ofrecer un<span class="text-blue-600 font-semibold">
+              servicio confiable, transparente y de
+              calidad</span>,
             respaldado por la experiencia y el compromiso con cada trabajo realizado.</p>
 
+        </div>
       </div>
     </div>
-  </div>
 
     <div id="caracteristicas" class="mt-24">
-       <h2 class="text-3xl font-semibold text-blue-600 text-center mb-10">• Nos caracteriza • </h2>
+      <h2 class="text-3xl font-semibold text-blue-600 text-center mb-10">• Nos caracteriza •</h2>
       <div class="grid grid-cols-2 gap-6">
 
         <div class="flex justify-center">
           <div class="w-[80%] flex flex-col gap-6">
-            <div
-              class="bg-blue-600/30 rounded-xl p-6 border-2 border-blue-600 transform transition-all hover:scale-[1.02]">
+            <div class="rounded-xl p-6 border-2 border-blue-600 transform transition-all hover:scale-[1.02]">
               <div class="flex items-center gap-2">
                 <div class="p-2 bg-blue-500/10 rounded-lg">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                  class="lucide lucide-badge-check-icon lucide-badge-check">
-                  <path
-                    d="M3.85 8.62a4 4 0 0 1 4.78-4.77 4 4 0 0 1 6.74 0 4 4 0 0 1 4.78 4.78 4 4 0 0 1 0 6.74 4 4 0 0 1-4.77 4.78 4 4 0 0 1-6.75 0 4 4 0 0 1-4.78-4.77 4 4 0 0 1 0-6.76Z" />
-                  <path d="m9 12 2 2 4-4" />
-                </svg>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="lucide lucide-badge-check-icon lucide-badge-check">
+                    <path
+                      d="M3.85 8.62a4 4 0 0 1 4.78-4.77 4 4 0 0 1 6.74 0 4 4 0 0 1 4.78 4.78 4 4 0 0 1 0 6.74 4 4 0 0 1-4.77 4.78 4 4 0 0 1-6.75 0 4 4 0 0 1-4.78-4.77 4 4 0 0 1 0-6.76Z" />
+                    <path d="m9 12 2 2 4-4" />
+                  </svg>
                 </div>
                 <span class="text-xl font-semibold text-white/70">Calidad en cada detalle</span>
               </div>
@@ -175,20 +183,19 @@
             </div>
 
 
-            <div
-              class="bg-blue-600/30 rounded-xl p-6 border-2 border-blue-600 transform transition-all hover:scale-[1.02]">
+            <div class=" rounded-xl p-6 border-2 border-blue-600 transform transition-all hover:scale-[1.02]">
               <div class="flex items-center gap-2">
                 <div class="p-2 bg-blue-500/10 rounded-lg">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                  class="lucide lucide-handshake-icon lucide-handshake">
-                  <path d="m11 17 2 2a1 1 0 1 0 3-3" />
-                  <path
-                    d="m14 14 2.5 2.5a1 1 0 1 0 3-3l-3.88-3.88a3 3 0 0 0-4.24 0l-.88.88a1 1 0 1 1-3-3l2.81-2.81a5.79 5.79 0 0 1 7.06-.87l.47.28a2 2 0 0 0 1.42.25L21 4" />
-                  <path d="m21 3 1 11h-2" />
-                  <path d="M3 3 2 14l6.5 6.5a1 1 0 1 0 3-3" />
-                  <path d="M3 4h8" />
-                </svg>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="lucide lucide-handshake-icon lucide-handshake">
+                    <path d="m11 17 2 2a1 1 0 1 0 3-3" />
+                    <path
+                      d="m14 14 2.5 2.5a1 1 0 1 0 3-3l-3.88-3.88a3 3 0 0 0-4.24 0l-.88.88a1 1 0 1 1-3-3l2.81-2.81a5.79 5.79 0 0 1 7.06-.87l.47.28a2 2 0 0 0 1.42.25L21 4" />
+                    <path d="m21 3 1 11h-2" />
+                    <path d="M3 3 2 14l6.5 6.5a1 1 0 1 0 3-3" />
+                    <path d="M3 4h8" />
+                  </svg>
                 </div>
                 <span class="text-xl font-semibold text-white/70">Compromiso y responsabilidad</span>
               </div>
@@ -201,22 +208,21 @@
 
         <div class="flex justify-center">
           <div class="w-[80%] flex flex-col gap-6">
-            <div
-              class="bg-blue-600/30 rounded-xl p-6 border-2 border-blue-600 transform transition-all hover:scale-[1.02]">
+            <div class="rounded-xl p-6 border-2 border-blue-600 transform transition-all hover:scale-[1.02]">
               <div class="flex items-center gap-2">
                 <div class="p-2 bg-blue-500/10 rounded-lg">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                  class="lucide lucide-pencil-ruler-icon lucide-pencil-ruler">
-                  <path d="M13 7 8.7 2.7a2.41 2.41 0 0 0-3.4 0L2.7 5.3a2.41 2.41 0 0 0 0 3.4L7 13" />
-                  <path d="m8 6 2-2" />
-                  <path d="m18 16 2-2" />
-                  <path d="m17 11 4.3 4.3c.94.94.94 2.46 0 3.4l-2.6 2.6c-.94.94-2.46.94-3.4 0L11 17" />
-                  <path
-                    d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z" />
-                  <path d="m15 5 4 4" />
-                </svg>
-                 </div>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="lucide lucide-pencil-ruler-icon lucide-pencil-ruler">
+                    <path d="M13 7 8.7 2.7a2.41 2.41 0 0 0-3.4 0L2.7 5.3a2.41 2.41 0 0 0 0 3.4L7 13" />
+                    <path d="m8 6 2-2" />
+                    <path d="m18 16 2-2" />
+                    <path d="m17 11 4.3 4.3c.94.94.94 2.46 0 3.4l-2.6 2.6c-.94.94-2.46.94-3.4 0L11 17" />
+                    <path
+                      d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z" />
+                    <path d="m15 5 4 4" />
+                  </svg>
+                </div>
                 <span class="text-xl font-semibold text-white/70">Diseño a medida</span>
               </div>
               <p class="text-blue-600">Cada trabajo es único. Adaptamos diseños y soluciones a las necesidades reales de
@@ -224,25 +230,24 @@
             </div>
 
 
-            <div
-              class="bg-blue-600/30 rounded-xl p-6 border-2 border-blue-600 transform transition-all hover:scale-[1.02]">
+            <div class=" rounded-xl p-6 border-2 border-blue-600 transform transition-all hover:scale-[1.02]">
               <div class="flex items-center gap-2">
                 <div class="p-2 bg-blue-500/10 rounded-lg">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                  class="lucide lucide-building-icon lucide-building">
-                  <path d="M12 10h.01" />
-                  <path d="M12 14h.01" />
-                  <path d="M12 6h.01" />
-                  <path d="M16 10h.01" />
-                  <path d="M16 14h.01" />
-                  <path d="M16 6h.01" />
-                  <path d="M8 10h.01" />
-                  <path d="M8 14h.01" />
-                  <path d="M8 6h.01" />
-                  <path d="M9 22v-3a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v3" />
-                  <rect x="4" y="2" width="16" height="20" rx="2" />
-                </svg>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="lucide lucide-building-icon lucide-building">
+                    <path d="M12 10h.01" />
+                    <path d="M12 14h.01" />
+                    <path d="M12 6h.01" />
+                    <path d="M16 10h.01" />
+                    <path d="M16 14h.01" />
+                    <path d="M16 6h.01" />
+                    <path d="M8 10h.01" />
+                    <path d="M8 14h.01" />
+                    <path d="M8 6h.01" />
+                    <path d="M9 22v-3a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v3" />
+                    <rect x="4" y="2" width="16" height="20" rx="2" />
+                  </svg>
                 </div>
                 <span class="text-xl font-semibold text-white/70">Experiencia y confianza</span>
               </div>
@@ -254,6 +259,102 @@
         </div>
       </div>
     </div>
+
+    <div class="mt-32"></div>
+
+
+
+    <section class="py-24">
+      <div class="max-w-7xl mx-auto px-10">
+
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-16 items-center">
+
+          <!-- IMAGEN -->
+          <div class="relative">
+            <div class="absolute inset-0 border-2 border-blue-600 rounded-xl translate-x-3  translate-y-3"></div>
+
+            <img src="./src/templado-botones-sin-pasamanos/img-principal.jpeg" alt="Proyecto"
+              class="relative z-10 rounded-xl object-cover w-full h-[420px]" />
+          </div>
+
+          <!-- TEXTO -->
+          <div class="flex flex-col gap-6 text-white">
+            <h2 class="text-4xl font-semibold text-blue-600">
+             Barandas de vidrio templado sin pasamano
+            </h2>
+
+            <div class="space-y-4 text-white/80 leading-relaxed">
+              <p>
+               Este modelo de baranda en vidrio templado se caracteriza por su diseño limpio y minimalista, sin pasamanos visibles. Es ideal para escaleras y balcones donde se busca seguridad sin perder amplitud visual ni luminosidad.
+              </p>
+
+              <p>
+                El sistema se instala mediante fijaciones puntuales en acero inoxidable, garantizando resistencia y estabilidad. El vidrio templado de seguridad cumple con las normas vigentes, ofreciendo durabilidad y protección para espacios interiores y exteriores.
+              </p>
+
+              <p>
+                Una solución moderna, funcional y estética, pensada para proyectos residenciales que priorizan diseño, seguridad y calidad en cada detalle.
+              </p>
+            </div>
+
+            <a href="#">
+              <button
+                class="border-2 w-fit border-white transition-all hover:bg-blue-600 hover:border-transparent px-6 py-3 rounded-xl">Ver más imágenes</button></a>
+          </div>
+
+        </div>
+
+      </div>
+    </section>
+
+
+
+        <section class="py-24">
+      <div class="max-w-7xl mx-auto px-10">
+
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-16 items-center">
+
+
+          <!-- TEXTO -->
+          <div class="flex flex-col gap-6 text-white">
+            <h2 class="text-4xl font-semibold text-blue-600">
+             Barandas de vidrio laminado con estructura de acero inoxidable
+            </h2>
+
+            <div class="space-y-4 text-white/80 leading-relaxed">
+              <p>
+               Este modelo de baranda combina vidrio laminado de seguridad con una estructura de acero inoxidable, ofreciendo una solución robusta, segura y de diseño moderno. Es ideal para escaleras, balcones y entrepisos donde se requiere mayor protección sin resignar estética.
+              </p>
+
+              <p>
+                El sistema incorpora guías y perfilería en acero inoxidable, que aportan estabilidad y un anclaje firme al conjunto. El vidrio laminado brinda una mayor resistencia ante impactos y, en caso de rotura, mantiene su integridad, aumentando el nivel de seguridad.
+              </p>
+
+              <p>
+               Una opción confiable y duradera, pensada para proyectos residenciales y comerciales que buscan combinar seguridad, calidad constructiva y una terminación prolija en cada detalle.
+              </p>
+            </div>
+
+            <a href="#">
+              <button
+                class="border-2 w-fit border-white transition-all hover:bg-blue-600 hover:border-transparent px-6 py-3 rounded-xl">Ver más imágenes</button></a>
+          </div>
+
+          
+          <!-- IMAGEN -->
+          <div class="relative">
+            <div class="absolute inset-0 border-2 border-blue-600 rounded-xl translate-x-3  translate-y-3"></div>
+
+            <img src="./src/Baranda-vidrio-laminado/img-principal.jpeg  " alt="Proyecto"
+              class="relative z-10 rounded-xl object-cover w-full h-[420px]" />
+          </div>
+
+        </div>
+
+      </div>
+    </section>
+
+
 
 
 
