--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 <body
   class="font-sans text-white bg-[radial-gradient(25%_35%_at_20%_60%,rgba(37,99,235,0.25)_0%,transparent_100%),radial-gradient(30%_40%_at_85%_30%,rgba(29,78,216,0.25)_0%,transparent_100%),radial-gradient(45%_55%_at_50%_80%,rgba(30,64,175,0.35)_0%,transparent_100%),linear-gradient(135deg,#020617_0%,#020617_100%)] bg-cover bg-no-repeat">
 
-
+ <!-- style="background-image: url(./src/imgs/jc-barandas-1920x1080-sin-bordes.png);" -->
   <header class="relative h-screen bg-cover bg-center flex flex-col "
-    style="background-image: url(./src/imgs/jc-barandas-1920x1080-sin-bordes.png);">
+    style="background-image: url(./src/imgs/img-hero.png);">
 
     <div class="absolute inset-0 bg-black/60 z-0"></div>
 
@@ -247,7 +247,7 @@
                     <path d="M8 6h.01" />
                     <path d="M9 22v-3a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v3" />
                     <rect x="4" y="2" width="16" height="20" rx="2" />
-                  </svg>
+                  </svg> 
                 </div>
                 <span class="text-xl font-semibold text-white/70">Experiencia y confianza</span>
               </div>
@@ -273,7 +273,7 @@
           <div class="relative">
             <div class="absolute inset-0 border-2 border-blue-600 rounded-xl translate-x-3  translate-y-3"></div>
 
-            <img src="./src/templado-botones-sin-pasamanos/img-principal.jpeg" alt="Proyecto"
+            <img src="./src/imgs/templado-botones-sin-pasamanos/img-principal.jpeg" alt="Proyecto"
               class="relative z-10 rounded-xl object-cover w-full h-[420px]" />
           </div>
 
@@ -345,7 +345,7 @@
           <div class="relative">
             <div class="absolute inset-0 border-2 border-blue-600 rounded-xl translate-x-3  translate-y-3"></div>
 
-            <img src="./src/Baranda-vidrio-laminado/img-principal.jpeg  " alt="Proyecto"
+            <img src="./src/imgs/Baranda-vidrio-laminado/img-principal.jpeg  " alt="Proyecto"
               class="relative z-10 rounded-xl object-cover w-full h-[420px]" />
           </div>
 
